# Agentic-GraphRAG-Dialog-Eval

./: .env.example  .gitignore  AGENTS.md  AgentMemory.md  README.md  pyproject.toml
data/business_docs/: complaint_handling.md  delivery_policy.md  payment_policy.md  product_policy.md  refund_policy.md  support_tone_policy.md
data/eval/: romanized_nepali_rag_eval_queries_300.jsonl  romanized_nepali_rag_eval_queries_README.md
docs/: dataset_notes.md  phase1_semantic_rag.md  research_protocol.md
experiments/: build_semantic_index.py  prepare_eval_queries.py  run_semantic_rag.py
paper/: build_pdf.py  references.bib  wochat2026_rag_eval.tex
results/: rag_evaluation_by_company.csv  rag_evaluation_by_difficulty.csv  rag_evaluation_report.md  rag_evaluation_summary.csv  rag_evaluation_summary.json
results/agentic_graph_rag/: eval_results.jsonl  rag_metrics_detailed.jsonl
results/agentic_rag/: eval_results.jsonl  rag_metrics_detailed.jsonl
results/analysis/: bootstrap_confidence_intervals.csv  by_category_analysis.csv  by_company_difficulty_analysis.csv  descriptive_stats.csv  failure_taxonomy.csv  latency_quality_tradeoff.csv  pairwise_significance_tests.csv  representative_failures.jsonl  research_grade_rag_evaluation_report.md  retrieval_quality_analysis.csv  (+1 more)
tests/: test_chat_provider.py  test_config.py  test_document_loader.py  test_eval_dataset_loader.py  test_evaluation_summary.py  test_prediction_schema.py  test_provider_factory.py  test_query_loader.py  test_rag_metric_evaluator.py  test_research_grade_analysis.py  test_semantic_retriever.py
(+73 files in other folders)
