[project]
name = "romanized-nepali-ragbench"
version = "0.1.0"
description = "Research benchmark for Traditional Semantic RAG, Agentic RAG, and Agentic GraphRAG on Romanized Nepali support dialogue."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.23",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "rich>=13.9.0",
    "sentence-transformers>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragbench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
